--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,69 @@
-opencv-python
-numpy
-mediapipe
-scipy
-python-vlc
+absl-py==2.3.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+attrs==25.3.0
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.3.0
+contourpy==1.3.3
+cycler==0.12.1
+filelock==3.19.1
+flatbuffers==25.2.10
+fonttools==4.59.2
+frozenlist==1.7.0
+fsspec==2025.9.0
+idna==3.10
+jax==0.7.1
+jaxlib==0.7.1
+Jinja2==3.1.6
+kiwisolver==1.4.9
+lightning-utilities==0.15.2
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.6
+mdurl==0.1.2
+mediapipe==0.10.14
+ml_dtypes==0.5.3
+mpmath==1.3.0
+multidict==6.6.4
+networkx==3.5
+numpy==2.2.6
+opencv-contrib-python==4.12.0.88
+opencv-python==4.12.0.88
+opt_einsum==3.4.0
+packaging==25.0
+pillow==11.3.0
+polars==1.33.1
+propcache==0.3.2
+protobuf==4.25.8
+psutil==7.0.0
+pycparser==2.23
+Pygments==2.19.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-osc==1.9.3
+python-rtmidi==1.5.8
+python-vlc==3.0.21203
+pytorch-lightning==2.5.5
+PyYAML==6.0.2
+requests==2.32.5
+rich==14.1.0
+scipy==1.16.1
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+sounddevice==0.5.2
+sympy==1.14.0
+torch==2.8.0
+torchaudio==2.8.0
+torchmetrics==1.8.2
+torchvision==0.23.0
+tqdm==4.67.1
+typer==0.19.1
+typing_extensions==4.15.0
+ultralytics==8.3.198
+ultralytics-thop==2.0.17
+urllib3==2.5.0
+yarl==1.20.1
